<resources>
    <string name="app_name">Safevision</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_register">Register</string>
    <string name="title_password">Password</string>
    <string name="title_password_ssid">Password SSID</string>
    <string name="title_login">Login</string>
    <string name="title_ssid_information">Informasi SSID</string>
    <string name="title_sensor_location">Lokasi Sensor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_sensors">Sensor</string>
    <string name="title_cctv">CCTV</string>
    <string name="title_ktp">No. Ktp</string>
    <string name="title_kota">Kota</string>
    <string name="title_register_sensor">Tambah Sensor</string>
    <string name="title_remember">Remember Me</string>
    <string name="title_forgot_pass">Forgot Password?</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_dontaccount">Don\'t Have An Account ?</string>
    <string name="title_another_login">Or login using your social media</string>
    <string name="title_sensor_id">ID Sensor</string>
    <string name="title_sensor_type">Tipe Sensor</string>
    <string name="title_ssid">SSID</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_tipe">Tipe</string>
    <string name="title_keterangan">Keterangan</string>
    <string name="title_bukti">Bukti</string>
    <string name="title_home_status">Home Status</string>
    <string name="title_sensor_status">Sensor Status</string>
    <string name="title_under_construction">… Oops. Nothing to see here.</string>

    <string name="subtitle_register">Isi form sesuai dengan identitas anda</string>
    <string name="subtitle_register_sensor">Tambah sensor di akun anda</string>
    <string name="subtitle_cctv">Halaman ini menunjukkan semua kegiatan dan status dari kegiatan yang telah dilakukan</string>
    <string name="subtitle_sensor">Halaman ini menunjukkan semua status sensor pintu di rumah anda</string>
    <string name="subtitle_laporan">Isi form sesuai dengan jenis pelayanan</string>

    <string name="btn_register">Submit</string>
    <string name="btn_cctv">Tambah CCTV</string>
    <string name="btn_sensor">Tambah Sensor</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_laporkan">LAPORKAN</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="btn_logout">Logout</string>

    <string name="hint_new_username">Buat username baru</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Masukkan email Anda</string>
    <string name="hint_ktp">356473829381889</string>
    <string name="hint_kota">Kota Surabaya</string>
    <string name="hint_new_password">Buat password baru</string>
    <string name="hint_old_password">Password lama</string>
    <string name="hint_sensor_id">Buat sensor ID</string>
    <string name="hint_sensor_type"></string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_ssid">WiFi-Kantor-Safevision</string>
    <string name="hint_tipe">Kebakaran</string>
    <string name="hint_keterangan">Keterangan</string>
    <string name="hint_bukti">123478265081</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_empty">Data tidak tersedia</string>

    <string name="msg_change_password">Kosongi saja jika tidak mengganti password.</string>

    <string name="main_title_cctv">Semua Laporan CCTV Anda</string>
    <string name="main_title_sensor">Sensor Pintu Rumah Anda</string>

    <string name="person_name">Muhammad Salah</string>
    <string name="person_city">Surabaya</string>

    <string name="datalist_cctv_name">CCTV Halaman</string>
    <string name="datalist_cctv_status">Aman</string>
    <string name="datalist_cctv_info">Info</string>
    <string name="datalist_sensor_name">Infra Merah 1</string>
    <string name="datalist_sensor_status">Aman</string>
    <string name="datalist_sensor_info">Online</string>

    <string name="mapbox_api_key">pk.eyJ1Ijoic2FkZXdhd2ljYWsiLCJhIjoiY2pvcHE2Z21jMTFyaTN2bHc4YmxyZzRueSJ9.5qyO5GZ9ZSVLSHScuYmJTQ</string>

</resources>
