<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_superlarge"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/margin_supersmall"
            android:text="@string/title_register"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_register"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/nunito"
            android:text="@string/title_username" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_username"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito"
            android:text="@string/title_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_email"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_ktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito"
            android:text="@string/title_ktp" />

        <EditText
            android:id="@+id/et_ktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_ktp"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito"
            android:text="@string/title_kota" />

        <EditText
            android:id="@+id/et_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_kota"
            android:padding="@dimen/margin_supersmall" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_superlarge"
            android:background="@drawable/btn_dark_rounded"
            android:fontFamily="@font/nunito"
            android:text="@string/btn_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
