<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/nunito"
            android:padding="8dp"
            android:text="@string/title_laporan"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_laporan"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/margin_supersmall"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:text="@string/title_tipe" />

        <EditText
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_tipe"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/margin_supersmall"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:text="@string/title_keterangan" />

        <EditText
            android:id="@+id/et_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_keterangan"
            android:gravity="top"
            android:lines="5"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_proof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/margin_supersmall"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:text="@string/title_bukti" />

        <EditText
            android:id="@+id/et_proof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_bukti"
            android:padding="@dimen/margin_supersmall" />

        <TextView
            android:id="@+id/tv_laporan_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/margin_supersmall"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:text="@string/title_kota" />

        <EditText
            android:id="@+id/et_laporan_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/input_white_rounded"
            android:hint="@string/hint_kota"
            android:padding="@dimen/margin_supersmall" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/btn_dark_rounded"
            android:fontFamily="@font/nunito"
            android:text="@string/btn_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
