<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.codedirect.trafficnetsecurity.ui.createsensor.CreateSensorViewModel" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/nunito"
                android:padding="@dimen/margin_supersmall"
                android:text="@string/title_register_sensor"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_register"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_sensor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/nunito"
                android:text="@string/title_sensor_id" />

            <EditText
                android:id="@+id/et_sensor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="textCapCharacters"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.sensorIdField}" />

            <TextView
                android:id="@+id/tv_sensor_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/nunito"
                android:text="@string/title_sensor_type" />

            <EditText
                android:id="@+id/et_sensor_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="textCapWords"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.sensorTypeField}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/gray_cloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_supersmall"
                android:text="@string/title_sensor_location"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sensor_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/hint_latitude" />

            <EditText
                android:id="@+id/et_sensor_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="numberDecimal"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.sensorLatField}" />

            <TextView
                android:id="@+id/tv_sensor_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/nunito"
                android:text="@string/hint_longitude" />

            <EditText
                android:id="@+id/et_sensor_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="numberDecimal"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.sensorLngField}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/gray_cloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_supersmall"
                android:text="@string/title_ssid_information"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ssid_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/title_ssid" />

            <EditText
                android:id="@+id/et_ssid_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="text"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.ssidNameField}" />

            <TextView
                android:id="@+id/tv_ssid_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/nunito"
                android:text="@string/title_password_ssid" />

            <EditText
                android:id="@+id/et_ssid_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_white_rounded"
                android:inputType="text"
                android:padding="@dimen/margin_supersmall"
                android:text="@={viewmodel.ssidPasswordField}"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_superlarge"
                android:background="@drawable/btn_dark_rounded"
                android:fontFamily="@font/nunito"
                android:onClick="@{(v) -> viewmodel.create()}"
                android:text="@string/btn_sensor"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</layout>