<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codedirect.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_trafficnet"
        android:id="@+id/login_logo"
        android:layout_marginTop="@dimen/margin_medium"/>

    <EditText
        android:layout_below="@id/login_logo"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/rectangle_input"
        android:hint="@string/title_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:padding="@dimen/margin_supersmall"
        android:layout_marginRight="@dimen/margin_small"
        android:id="@+id/login_email"
        android:fontFamily="@font/nunito"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_below="@+id/login_email"
        android:layout_marginTop="@dimen/margin_supersmall"
        android:background="@drawable/rectangle_input"
        android:hint="@string/title_password"
        android:fontFamily="@font/nunito"
        android:id="@+id/login_password"
        android:padding="@dimen/margin_supersmall"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_purple"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:text="@string/title_login"
        android:textColor="@android:color/white"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        android:id="@+id/login_btn"
        android:textSize="@dimen/text_small"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dontaccount"
        android:layout_marginTop="@dimen/margin_small"
        android:textAlignment="center"
        android:layout_marginRight="@dimen/margin_supersmall"
        android:layout_marginLeft="@dimen/margin_supersmall"
        android:fontFamily="@font/nunito"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:layout_below="@+id/login_btn"/>

</RelativeLayout>
