<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_supersmall"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_cctv_thumbnail"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_home_black_24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_supersmall"
            android:layout_marginTop="@dimen/margin_supersmall"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cctv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/datalist_cctv_name"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cctv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/datalist_cctv_status"
                android:textColor="@android:color/holo_green_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cctv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_supersmall"
            android:layout_marginEnd="@dimen/margin_small"
            android:fontFamily="@font/nunito"
            android:text="@string/datalist_cctv_info"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>
</androidx.cardview.widget.CardView>